<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="xpense_details">Expense Details</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_description">Enter Description</string>
    <string name="view_data">View Data</string>
    <string name="save">Save</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_category">Enter Expense Category</string>
    <string name="dummy_title">Groceries</string>
    <string name="fab_content_desc">add btn</string>
    <string name="dummy_catrgory">cash</string>
    <string name="dummy_amount">160.00</string>
    <string name="dummy_date">12/06/2020</string>
    <string name="add_expense">Add Expense Details</string>
    <string name="dashboard">Dashboard</string>
    <string name="transactions">Transactions</string>
    <string name="graph_view">Graph View</string>
    <string name="welcome">Welcome Back!</string>
    <string name="dummy_name">Divyam</string>
    <string name="ba">Bank Account</string>
    <string name="cc">Credit Card</string>
    <string name="ca">Cash</string>
    <string name="balance_amount">Balance Amount</string>
    <string name="dummy_balance_amount">20000</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="delete">DELETE</string>
    <string name="hey">Hey There</string>
    <string name="xpense_amount">Total Expense Amount</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="about">About</string>
    <string name="expense_amount">Total Expense Amount:</string>
    <string name="moto">Stay on track with your expenses so you’ll never run out of money again! Start budgeting and saving so you can afford nice things.</string>
    <string name="moto_1">Stay on track with your</string>
    <string name="moto_2">expenses so you’ll never run</string>
    <string name="moto_3">"out of money again! Start "</string>
    <string name="moto_4">budgeting and saving so you</string>
    <string name="moto_5">can afford nice things.</string>
</resources>