<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EditExpense"
    android:id="@+id/activity_main"
    android:background="@color/colorPrimaryDark">

    <android.support.v7.widget.Toolbar
        android:id="@+id/edit_expense_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:elevation="4dp"
        app:theme="@style/ToolbarTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:gravity="center"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/edit_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_expense"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:fontFamily="@font/rubik_medium"
            android:gravity="center"
            android:layout_gravity="center"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_rec"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:layout_centerVertical="true">


        <EditText
            android:id="@+id/editAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/enter_amount"
            android:autofillHints=""
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="24dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:fontFamily="@font/rubik_regular" />

        <EditText
            android:id="@+id/editDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/enter_date"
            android:autofillHints=""
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="24dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:fontFamily="@font/rubik_regular"/>

        <EditText
            android:id="@+id/editDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/enter_description"
            android:autofillHints=""
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="24dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:fontFamily="@font/rubik_regular" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editCategory"
            android:spinnerMode="dropdown"
            android:layout_marginTop="24dp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"/>

        <RelativeLayout
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="60dp"
            android:layout_marginVertical="24dp">

            <Button
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/save_button"
                android:onClick="save_details"
                android:textSize="14sp"
                android:fontFamily="@font/rubik_semi_bold_italic"
                android:background="@drawable/bg_rec_b"
                android:layout_alignParentStart="true"/>

            <Button
                android:text="@string/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/delete_button"
                android:onClick="delete_details"
                android:textSize="14sp"
                android:fontFamily="@font/rubik_semi_bold_italic"
                android:background="@drawable/bg_rec_b"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>