<?xml version="1.0" encoding="utf-8"?>
    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_view"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/colorPrimary"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:layout_gravity="start">

            <TextView
                android:id="@+id/card_view_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:text="@string/dummy_title"
                android:fontFamily="@font/rubik_medium" />

            <TextView
                android:id="@+id/card_view_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:alpha="0.5"
                android:textColor="@color/colorAccent"
                android:text="@string/dummy_date"
                android:fontFamily="@font/rubik_italic"
                android:layout_marginTop="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:layout_gravity="end">

            <TextView
                android:id="@+id/card_view_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textColor="@color/colorAccent"
                android:text="@string/dummy_amount"
                android:fontFamily="@font/rubik_medium"
                android:drawableStart="@drawable/ic_rupee_sign"
                android:drawablePadding="4dp"
                android:layout_gravity="end"/>

            <TextView
                android:id="@+id/card_view_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:alpha="0.5"
                android:textColor="@color/colorAccent"
                android:text="@string/dummy_catrgory"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/rubik_italic"
                android:layout_gravity="end"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>
